# polyserve

./: .gitignore  Cargo.toml  README.md
include/: default.toml
include/templates/: index.html.hbs  layout.html.hbs
src/: app.rs  common.rs  context.rs  error.rs  index.html.hbs  lib.rs  main.rs  poly_state.rs  request.rs  request_config.rs  resource.rs  response.rs
src/middleware/: allow_methods.rs  auto_index.rs  early_return.rs  logger.rs  mod.rs  resolve_file.rs  resolve_resource.rs  serve_file.rs  server_header.rs  trailing_slash.rs  use_index.rs
src/middleware/hbs/: helpers.rs  mod.rs  render_hbs.rs
src/resource/: common.rs  file_resource.rs  index_resource.rs  mod.rs  resource.rs
src/server/: context.rs  mod.rs  server.rs  server_context.rs  server_error.rs
