[package]
name = "polyserve"
version = "0.2.0"
authors = ["Richard Carls <richard.j.carls@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/richardcarls/polyserve/"
description = "Toy HTTP server built in Rust on top of roa (https://github.com/Hexilee/roa)"
keywords = ["http", "server"]
publish = false

[[bin]]
name = "polyserve"
path = "src/bin/main.rs"

[lib]
name = "polyserve"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
log = "0.4.14"
simple_logger = "1.13.0"
roa = { version = "0.5", features = ["tcp", "tls"] }
config = "0.11.0"
urlencoding = "2.1.0"
mime = "0.3.16"
mime_guess = "2.0.3"
chrono = "0.4.19"
handlebars = "4.1.3"
clap = { version = "3.1.18", features = ["derive"] }
