[package]
name = "polyserve"
version = "0.2.2"
authors = ["Richard Carls <richard.j.carls@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/richardcarls/polyserve/"
description = "Toy HTTP server built in Rust on top of roa (https://github.com/Hexilee/roa)"
keywords = ["http", "server"]
publish = false

[[bin]]
name = "polyserve"
path = "src/bin/main.rs"

[lib]
name = "polyserve"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
roa = { version = "0.5", features = ["tcp", "tls"] }
config = "0.11"
urlencoding = "2.1"
mime = "0.3"
mime_guess = "2.0"
chrono = "0.4"
handlebars = "4.1"
clap = { version = "3.1", features = ["derive"] }
